<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:android.support.design="http://schemas.android.com/apk/res-auto"
                xmlns:app="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:background="@android:color/white"
                android:focusable="true"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true"
                android:id="@+id/detail_relative">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:elevation="4dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:layout_below="@id/my_toolbar"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:text="@string/select_files_to_enc_dec"
        android:gravity="center_vertical"
        android:elevation="4dp"
        android:padding="10dp"
        android:textSize="16sp"
        android:id="@+id/toolbar_ext"/>


<android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/toolbar_ext"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:id="@+id/nested_scroll"
   >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/inner_layout"
        android:padding="16dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/passphrase_caps"
            android:textColor="@color/colorPrimary"
            android:id="@+id/textView0"
            android:textStyle="bold"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="4dp"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/textView0"
            >
            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/enter_passphrase"
                android:textSize="14sp"
                android:inputType="textPassword"/>

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/paths_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:hint="@string/no_file_selected"
            android:padding="10dp"
            android:textStyle="italic"
            android:background="@drawable/round_corner"
            android:visibility="visible"
            android:enabled="false"
            android:layout_below="@+id/textView3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/pick_button"
            android:layout_toStartOf="@+id/pick_button"
            android:layout_marginTop="4dp"
            android:textColor="@color/colorAccent"
            android:textColorHint="#f44336"/>


        <Button
            android:id="@+id/ok_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:layout_below="@+id/checkbox_delete"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="16dp"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_source"
            android:id="@+id/checkbox_delete"
            android:checked="false"
            android:textSize="16sp"
            android:layout_below="@+id/paths_text"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/ok_button"
            android:layout_alignEnd="@+id/ok_button"
            android:layout_marginTop="8dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_files"
            android:id="@+id/pick_button"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:textColor="@color/colorPrimary"
            android:layout_alignTop="@+id/paths_text"
            android:layout_alignRight="@+id/checkbox_delete"
            android:layout_alignEnd="@+id/checkbox_delete"
            android:layout_above="@+id/checkbox_delete"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="200dp"
            android:id="@+id/spinner_mode"
            android:spinnerMode="dropdown"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView"
            />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="200dp"
            android:id="@+id/spinner_enc_key"
            android:spinnerMode="dropdown"
            android:layout_below="@+id/textView2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="MODE"
            android:textColor="@color/colorPrimary"
            android:id="@+id/textView"
            android:layout_below="@+id/input_layout_password"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="4dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="KEY LENGTH"
            android:textColor="@color/colorPrimary"
            android:id="@+id/textView2"
            android:textStyle="bold"
            android:layout_below="@+id/spinner_mode"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="4dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="FILES"
            android:textColor="@color/colorPrimary"
            android:id="@+id/textView3"
            android:textStyle="bold"
            android:layout_below="@+id/spinner_enc_key"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"/>

    </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>

